fixed spacing on home and about

--- a/_sass/_about.scss
+++ b/_sass/_about.scss
@@ -30,7 +30,7 @@ section.about {
 
 	// Intro Section
 	div.intro {
-		margin: 120px 0 90px;
+		margin: 150px 0 90px;
 
 		div.blurb {
 			font-size: 24px;
@@ -121,7 +121,7 @@ section.about {
 		padding: 0 45px;
 
 		div.intro {
-			margin: 180px 0 180px;
+			margin: 180px 0 150px;
 		}
 	}
 }
