--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -17,7 +17,7 @@ section.homepage {
 
 	// Intro Section
 	div.intro {
-		margin: 120px 0 120px;
+		margin: 150px 0 90px;
 
 		div.blurb {
 			font-size: 24px;
